Learnings/Kubernetes/21-network-policy/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backend
  namespace: vivek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
