Learnings/Kubernetes/21-network-policy/database.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: database
  namespace: vivek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
