Learnings/Kubernetes/21-network-policy/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend
  namespace: vivek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
