Learnings/Kubernetes/21-network-policy/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: vivek
spec:
  selector: 
    app: backend
  ports:
  - port: 80
    targetPort: 80
