Learnings/Kubernetes/21-network-policy/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: vivek
spec:
  selector: 
    app: database
  ports:
  - port: 80
    targetPort: 80
