Learnings/Kubernetes/21-network-policy/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: vivek
spec:
  selector: 
    app: frontend
  ports:
  - port: 80
    targetPort: 80
