Learnings/Kubernetes/21-network-policy/db-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-database
  namespace: vivek
spec:
  podSelector: 
    matchLabels:
      app: database
  
  ingress:
  - from: 
    - podSelector: 
        matchLabels:
          app: backend
    
    ports:
    - protocol: TCP
      port: 80
